apps/base/orca-slicer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orca-slicer-svc
  namespace: orca-slicer
  labels:
    app: orca-slicer
spec:
  selector:
    app: orca-slicer
  ports:
    - protocol: TCP
      port: 5800
      targetPort: 5800
