apps/base/orca-slicer/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: orca-slicer-https-route
  namespace: orca-slicer
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - orca-slicer.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: orca-slicer-svc
          port: 5800
